# qplaintextedit-bug

./: CMakeLists.txt  qbug.cpp
